summary added for the infos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to DevOps Management Portal</h1>
+        <h1>Welcome to DevOpsphere Management Portal</h1>
+        <h6>A powerful tool that empowers users to manage their AWS servers effortlessly, without the need to navigate the complexities of the AWS console.</h6>
         <div id="date-time"></div>
     </header>
     <nav>
